Refactor style.css for cleaner layout and design

--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@ body {
   align-items: center;
   height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  display: flex;
-  justify-content: center;
-  height: 100vh;
 }
 
 .iphone {
@@ -31,45 +28,44 @@ body {
   height: 24px;
   background-color: black;
   border-radius: 12px;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-  opacity: 100%;
 }
-.img{
-overflow: hidden;
-margin: 0;
-height: 44px;
-}
+
 .home-bar {
   position: absolute;
-  bottom: 3px;
+  bottom: 5px;
   left: 50%;
   transform: translateX(-50%);
   width: 120px;
   height: 5px;
   background-color: black;
   border-radius: 3px;
-  opacity: 100%;
 }
-.volume-buttons {
-  position: absolute;
-  left: -8px;
-  top: 160px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
+
 .display {
   color: black;
   text-align: right;
   font-size: 55px;
   padding: 20px 10px;
   margin-top: 100px;
-  border-radius: 20px;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 68px);
+  gap: 5px;
+  justify-content: center;
+}
+
+.btn {
+  height: 70px;
+  border-radius: 50%;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
 }
 
 .lightGrey {
   background-color: lightgrey;
-  color: black;
 }
 
 .darkGrey {
@@ -79,23 +75,17 @@ height: 44px;
 .orange {
   background-color: orange;
 }
-.btn {
-  height: 70px;
-  border-radius: 50%;
-  border: none;
-  font-size: 25px;
-  color: black;
-  cursor: pointer;
+
+.zero {
+  grid-column: span 2;
+  border-radius: 35px;
 }
-.buttons {
-  display: grid;
-  grid-template-columns: repeat(4, 68px);
-  gap: 5px;
-  justify-content: center;
-}
-.calculator {
-  background-color: white;
-  padding: 0px;
-  box-sizing: border-box;
-  border-radius: 0px;
+
+.credit {
+  position: absolute;
+  bottom: 25px;
+  width: 100%;
+  text-align: center;
+  font-size: 11px;
+  color: #777;
 }
