--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: rgb(6, 6, 6);
+  background: #060606;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,11 +10,11 @@ body {
 
 .iphone {
   position: relative;
-  width: 300px;
-  height: 650px;
-  background-color: white;
+  width: 320px;
+  height: 680px;
+  background: white;
   border-radius: 45px;
-  border: 8px solid rgb(10, 10, 1);
+  border: 8px solid #0a0a01;
   box-shadow: 0 0 200px rgb(193, 149, 149);
   overflow: hidden;
 }
@@ -24,69 +24,85 @@ body {
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
-  width: 96px;
-  height: 24px;
-  background-color: black;
-  border-radius: 12px;
+  width: 100px;
+  height: 26px;
+  background: black;
+  border-radius: 13px;
 }
 
 .home-bar {
   position: absolute;
-  bottom: 5px;
+  bottom: 6px;
   left: 50%;
   transform: translateX(-50%);
   width: 120px;
   height: 5px;
-  background-color: black;
+  background: black;
   border-radius: 3px;
 }
 
 .display {
-  color: black;
+  margin-top: 95px;
+  padding: 20px;
+  font-size: 56px;
   text-align: right;
-  font-size: 55px;
-  padding: 20px 10px;
-  margin-top: 100px;
+  color: black;
 }
 
+/* BUTTON AREA */
 .buttons {
   display: grid;
-  grid-template-columns: repeat(4, 68px);
-  gap: 5px;
-  justify-content: center;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 14px;               /* 👈 bigger space */
+  padding: 18px;
 }
 
+/* BUTTON */
 .btn {
-  height: 70px;
+  height: 72px;  
   border-radius: 50%;
   border: none;
-  font-size: 20px;
+  font-size: 24px;
+  font-weight: 500;
   cursor: pointer;
+  transition: transform 0.1s, opacity 0.1s;
 }
 
+.btn:active {
+  transform: scale(0.95);
+  opacity: 0.8;
+}
+
+/* COLORS */
 .lightGrey {
-  background-color: lightgrey;
+  background: #d4d4d2;
 }
 
 .darkGrey {
-  background-color: darkgray;
+  background: #505050;
+  color: white;
 }
 
 .orange {
-  background-color: orange;
+  background: #ff9500;
+  color: white;
 }
 
+/* ZERO */
 .zero {
   grid-column: span 2;
-  border-radius: 35px;
+  border-radius: 40px;
+  text-align: left;
+  padding-left: 30px;
 }
 
+/* CREDIT */
 .credit {
-  bottom: 25px;
+  position: absolute;
+  bottom: 22px;
   width: 100%;
   text-align: center;
-  font-size: 110px;
-  color: #777;
+  font-size: 10px;
+  color: #888;
+  opacity: 0.6;
 }
-
-
